k8s/ganache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f vault/docker/docker-compose.yml -o k8s/
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ganache
  name: ganache
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ganache
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f vault/docker/docker-compose.yml -o k8s/
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-develop: "true"
        io.kompose.service: ganache
    spec:
      containers:
        - command:
            - node
            - /app/ganache-core.docker.cli.js
            - --deterministic
            - --db=/ganache_data
            - --mnemonic
            - volcano story trust file before member board recycle always draw fiction when
            - --networkId
            - "8545"
            - --hostname
            - 0.0.0.0
          image: trufflesuite/ganache-cli:latest
          name: ganache
          ports:
            - containerPort: 8545
          resources: {}
          volumeMounts:
            - mountPath: /ganache_data
              name: ganache-claim0
      restartPolicy: Always
      volumes:
        - name: ganache-claim0
          persistentVolumeClaim:
            claimName: ganache-claim0
status: {}
