k8s/ganache-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f vault/docker/docker-compose.yml -o k8s/
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ganache
  name: ganache
spec:
  ports:
    - name: "8545"
      port: 8545
      targetPort: 8545
  selector:
    io.kompose.service: ganache
status:
  loadBalancer: {}
