k8s/docker-develop-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: docker-develop
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/docker-develop: "true"
  podSelector:
    matchLabels:
      io.kompose.network/docker-develop: "true"
